--- a/5.AllerPlusLoin.tex
+++ b/5.AllerPlusLoin.tex
@@ -12,6 +12,8 @@ Les contacts par pointes sont aussi remplacés par des micro-soudures qui possè
 \end{figure}
 
 Pour finir, l'expérience actuelle se déroule actuellement à des températures de 30mK dans un réfrigérateurs à dilution, la température de électronique étant elle de l'ordre de 80mK \cite{10}. Le principe du réfrigérateur à dilution est comparable à celui d'un réfrigérateur classique, des détentes de Joule-Thomsom successives pour refroidir l'hélium à de très basses températures. Le réfrigérateur étant constitué de différents étages dont les températures vont en diminuant pour limiter les pertes. Il faut cependant attendre plusieurs heures pour qu'une température de 30mK soit atteinte.
+
+\newpage
 \section{Vers l'information quantique ?}
 
 L'information quantique se définit comme “la théorie de l'utilisation des spécificités de la physique quantique pour le traitement et la transmission de l'information” \cite{18}. L'utilisation de telles propriétés permettraient d'obtenir des supports et du traitement de l'information bien plus efficaces qu'actuellement.
