--- a/bibliographie.bib
+++ b/bibliographie.bib
@@ -106,7 +106,7 @@
 @misc{16,
   title        = {Conception et réalisation d'un nouveau capteur de gaz passif communicant à transduction {RF}},
   author       = "Paul Sabatier",
-  year         = "Novembre 2011",
+  year         = "2011",
   howpublished = "\url{http://thesesups.ups-tlse.fr/1028/1/Hallil_Hamida.pdf}",
 }
 
